--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mapbox-gl": "^2.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
