--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "csv-loader": "^3.0.3",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "mapbox-gl": "^2.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
